4_cafe/ingress_cafe.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx 
  tls:
  - hosts:
    secretName: cafe-secret
  rules:
  - host: 1b731b71-accd-45a7-ac94-ace88094fea2.access.udf.f5.com
    http:
      paths:
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
